# k8s-autoannotation-webhook

./: .coveragerc  .dockerignore  .gitignore  .pre-commit-config.yaml  .tool-versions  .yamllint.yaml  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  TESTING.md  coverage_report.sh  main.py  pyproject.toml  pytest.ini  run_coverage.sh  run_tests.sh
.devcontainer/: Dockerfile  devcontainer.json
.github/: build.yaml
.github/workflows/: build.yaml  publish.yaml  release.yaml  semantic-release.yaml  test.yaml
app/: __init__.py
app/api/: di.py  schemas.py  server.py
app/api/routes/: item.py  webhook.py
app/domain/: interfaces.py  models.py
app/handlers/: item.py
app/infra/: memory_repo.py
app/tools/: validator.py
kubernetes/charts/autoannotation/: Chart.yaml  values.yaml
kubernetes/charts/autoannotation/templates/: NOTES.txt  _helpers.tpl  certificates.yaml  deployment.yaml  hpa.yaml  httproute.yaml  ingress.yaml  muttationwebconfiguration.yaml  service.yaml  serviceaccount.yaml
kubernetes/charts/autoannotation/templates/tests/: test-connection.yaml
tests/: conftest.py  test_api_items.py  test_handlers.py  test_webhook.py
